<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ProjectActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/projects_header"
        android:textSize="25sp" />

    <Button
        android:id="@+id/spotify_streamer"
        android:layout_width="fill_parent"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_height="@dimen/project_btn_size"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/project_btn_offset"
        android:text="@string/spotify_streamer_title" />

    <Button
        android:id="@+id/super_duo"
        android:layout_width="fill_parent"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_height="@dimen/project_btn_size"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/project_btn_offset"
        android:text="@string/super_duo_title" />

    <Button
        android:id="@+id/build_it_bigger"
        android:layout_width="fill_parent"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_height="@dimen/project_btn_size"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/project_btn_offset"
        android:text="@string/build_it_bigger_title" />

    <Button
        android:id="@+id/xyz_reader"
        android:layout_width="fill_parent"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_height="@dimen/project_btn_size"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/project_btn_offset"
        android:text="@string/xyz_reader_title" />

    <Button
        android:id="@+id/capstone"
        android:layout_width="fill_parent"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_height="@dimen/project_btn_size"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/project_btn_offset"
        android:text="@string/capstone_title" />

</LinearLayout>
